artifacts/logs/true-50-round-full-pool-20260415-210800.log
  File "<stdin>", line 25
    SCOPE_PATH = ROOT / 'assets/benchmark_scopes/all-completed-15-turn-moimport json
                                                                                    ^
SyntaxError: EOL while scanning string literal
